--- a/assets/style/sass/_footer.sass
+++ b/assets/style/sass/_footer.sass
@@ -1,7 +1,7 @@
 .footer
     display: flex
     padding: 0.5rem 10rem
-    justify-content: space-between
+    justify-content: space-around
     font-size: 0.8rem
     border-top: 0.1rem solid black
     align-items: center
@@ -10,4 +10,3 @@
     a
         &:hover
             background: none
-            
